; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_net.c_kull_m_net_getCurrentDomainInfo.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_net.c_kull_m_net_getCurrentDomainInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@FALSE = common dso_local global i64 0, align 8
@POLICY_VIEW_LOCAL_INFORMATION = common dso_local global i32 0, align 4
@PolicyDnsDomainInformation = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @kull_m_net_getCurrentDomainInfo(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i64, i64* @FALSE, align 8
  store i64 %6, i64* %3, align 8
  %7 = bitcast %struct.TYPE_3__* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %7, i8 0, i64 4, i1 false)
  %8 = load i32, i32* @POLICY_VIEW_LOCAL_INFORMATION, align 4
  %9 = call i32 @LsaOpenPolicy(i32* null, %struct.TYPE_3__* %5, i32 %8, i32* %4)
  %10 = call i64 @NT_SUCCESS(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @PolicyDnsDomainInformation, align 4
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @LsaQueryInformationPolicy(i32 %13, i32 %14, i32* %15)
  %17 = call i64 @NT_SUCCESS(i32 %16)
  store i64 %17, i64* %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @LsaClose(i32 %18)
  br label %20

20:                                               ; preds = %12, %1
  %21 = load i64, i64* %3, align 8
  ret i64 %21
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @NT_SUCCESS(i32) #2

declare dso_local i32 @LsaOpenPolicy(i32*, %struct.TYPE_3__*, i32, i32*) #2

declare dso_local i32 @LsaQueryInformationPolicy(i32, i32, i32*) #2

declare dso_local i32 @LsaClose(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
